test/test_suite/errors/error_decl_ok.c3
module errors;

errtype TheError
{
    int a;
}

errtype TheError2
{
    char a;
    char b;
}

errtype TheError3
{
    void *a;
}

errtype OtherError;

